test_regress/t/t_class_super_bad2.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2020 Rafal Kapuscik
// SPDX-License-Identifier: CC0-1.0
//

class Cls;
   task t;
      super.i = 1;  // Bad - no extends
   endtask
endclass
